Resolves: tdf#152381 Treat 0-0-0 invalid date as 0 relative days

Change-Id: I70cf18395e26ababa854299a58f8839f5bdf8e2c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143748
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins